fix(settings): fix collapse animation on mobile

--- a/src/plugins/settings/settings.less
+++ b/src/plugins/settings/settings.less
@@ -51,7 +51,7 @@
       .scrollbar-expanded();
     }
 
-    &.collapsed {
+    .uip-root[settings-collapsed] & {
       max-height: 0;
       max-width: 100%;
 
